--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Minesweeper Game</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/minesweeper/favicon.ico">
 </head>
 <body>
     <div id="game-container">
